<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory />
    <PreferenceCategory
            android:key="search"
            android:title="@string/search"
            app:isPreferenceVisible="true">
        <SwitchPreference
                android:icon="@drawable/search_icon_white"
                app:key="advanced_search"
                android:title="@string/advanced_search"
                android:summary="@string/advanced_search_desc"
                app:defaultValue="true" />
        <Preference
                app:icon="@drawable/ic_baseline_cloud_24"
                android:key="@string/search_providers_list_key"
                android:title="@string/search_providers"
                app:useSimpleSummaryProvider="true" />
        <Preference
                android:key="@string/download_path_key"
                android:title="@string/download_path_pref"
                android:icon="@drawable/netflix_download" />
        <!--<ListPreference
                app:icon="@drawable/ic_baseline_grid_view_24"
                android:key="@string/grid_format_key"
                android:title="Display Mode"
                app:defaultValue="grid"
                app:useSimpleSummaryProvider="true"
                android:entries="@array/GridFormat"
                android:entryValues="@array/GridFormatData" />-->
        <Preference
                android:icon="@drawable/ic_baseline_language_24"
                android:key="@string/provider_lang_key"
                android:title="@string/provider_lang_settings" />

        <Preference
                android:icon="@drawable/ic_baseline_language_24"
                android:key="@string/locale_key"
                android:title="@string/locale_settings" />
    </PreferenceCategory>


    <PreferenceCategory
            android:key="general"
            android:title="@string/general"
            app:isPreferenceVisible="true">
        <!--
        <ListPreference
                app:icon="@drawable/ic_baseline_cloud_24"
                android:key="@string/provider_list_key"
                android:title="Active Provider"
                app:useSimpleSummaryProvider="true" />-->
        <Preference
                app:icon="@drawable/ic_baseline_star_24"
                android:key="@string/rating_format_key"
                android:title="@string/rating_format"
                app:defaultValue="star"
                app:useSimpleSummaryProvider="true" />
        <Preference
                app:icon="@drawable/ic_baseline_grid_view_24"
                android:key="@string/download_format_key"
                android:title="@string/library_display_mode"
                app:defaultValue="list"
                app:useSimpleSummaryProvider="true"
                android:entries="@array/DownloadGridFormat"
                android:entryValues="@array/DownloadGridFormatData" />
        <SwitchPreference
                app:key="@string/auto_update_key"
                android:title="@string/show_app_updates"
                android:summary="@string/show_app_updates_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_notifications_active_24" />
        <SwitchPreference
                app:key="@string/external_reader_key"
                android:title="@string/external_reader"
                android:summary="@string/external_reader_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_menu_book_24" />
        <SwitchPreference
                app:key="@string/remove_external_key"
                android:title="@string/remove_bloat"
                android:summary="@string/remove_bloat_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_edit_24" />
        <SwitchPreference
                app:key="@string/show_covers_key"
                android:title="@string/show_covers"
                android:summary="@string/show_covers_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_image_24" />
        <SwitchPreference
                app:key="@string/tts_show_cover_key"
                android:title="@string/tts_show_cover"
                android:summary="@string/tts_show_cover_desc"
                app:defaultValue="true"
                android:icon="@drawable/ic_baseline_volume_up_24" />
        <SwitchPreference
                app:key="@string/tts_prefetch_on_open_key"
                android:title="@string/tts_prefetch_on_open"
                android:summary="@string/tts_prefetch_on_open_desc"
                app:defaultValue="false"
                android:icon="@drawable/ic_baseline_volume_up_24" />

        <Preference
                app:key="@string/theme_key"
                android:title="@string/theme"
                android:icon="@drawable/ic_baseline_color_lens_24"
                app:useSimpleSummaryProvider="true" />
        <Preference
                app:key="@string/primary_color_key"
                android:title="@string/primary_color_settings"
                android:icon="@drawable/ic_baseline_color_lens_24"
                app:useSimpleSummaryProvider="true" />

        <Preference
                android:title="@string/check_for_update"
                app:key="@string/manual_check_update_key"
                app:icon="@drawable/ic_baseline_system_update_24" />
        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/on_device_gen_title"
                android:summary="@string/on_device_gen_desc"
                app:key="on_device_generation"
                app:icon="@drawable/ic_baseline_volume_up_24" />
        <Preference
                android:title="@string/audio_sync_manager"
                android:summary="@string/audio_sync_manager_desc"
                app:key="tts_sync_manager"
                app:icon="@drawable/ic_baseline_volume_up_24" />
        <Preference
                android:title="@string/server_book_sync"
                android:summary="@string/server_book_sync_desc"
                app:key="server_book_sync"
                app:icon="@drawable/ic_baseline_cloud_24" />
        <Preference
                android:title="@string/server_update"
                android:summary="@string/server_update_desc"
                app:key="@string/server_update_key"
                app:icon="@drawable/ic_baseline_system_update_24" />
        <Preference
                android:icon="@drawable/baseline_save_as_24"
                android:key="@string/backup_key"
                android:title="@string/backup_settings" />

        <Preference
                android:icon="@drawable/baseline_restore_page_24"
                android:key="@string/restore_key"
                android:title="@string/restore_settings" />
        <Preference
                android:icon="@drawable/baseline_description_24"
                android:key="@string/show_logcat_key"
                android:title="@string/show_log_cat" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="ai_fixer"
            android:title="@string/llm_server_settings_title"
            app:isPreferenceVisible="true">
        <Preference
                android:icon="@drawable/ic_baseline_cloud_24"
                android:key="llm_server_settings"
                android:title="@string/llm_configure_test"
                android:summary="@string/llm_server_settings_summary" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="extra"
            android:title="@string/info"
            app:isPreferenceVisible="true">

        <Preference
                android:title="Github"
                android:icon="@drawable/ic_github_logo"
                app:summary="https://github.com/LagradOst/QuickNovel">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/LagradOst/QuickNovel" />
        </Preference>

        <Preference
                android:title="Anime and Movie app by the same devs"
                android:icon="@drawable/ic_github_logo"
                app:summary="https://github.com/recloudstream/cloudstream">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/recloudstream/cloudstream" />
        </Preference>

        <Preference
                android:title="Join Discord"
                android:icon="@drawable/ic_baseline_discord_24"
                app:summary="https://discord.gg/5Hus6fM">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://discord.gg/5Hus6fM" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
